# substrate

frame/custom-pallet/: Cargo.toml
frame/custom-pallet/src/: lib.rs
frame/mapper/: Cargo.toml
frame/mapper/src/: lib.rs
frame/nftmap/: Cargo.toml
frame/nftmap/src/: lib.rs
frame/pallet-mapper/src/: lib.rs
frame/staking/: Cargo.toml
frame/staking/src/: inflation.rs  lib.rs
frame/staking/src/pallet/: impls.rs  mod.rs
